Fixed sort order (as query string is ignored due to CF aggressive caching policy)

--- a/get.filebot.net/filebot/.htaccess
+++ b/get.filebot.net/filebot/.htaccess
@@ -1,7 +1,8 @@
 Options +Indexes
 
 IndexStyleSheet https://www.filebot.net/index.css
-IndexOptions Charset=UTF-8 FancyIndexing NameWidth=* IconsAreLinks IconWidth=16 IconHeight=16 VersionSort FoldersFirst IgnoreCase SuppressDescription XHTML HTMLTable
+IndexOptions FancyIndexing NameWidth=* IconsAreLinks IconWidth=16 IconHeight=16 VersionSort FoldersFirst IgnoreCase IgnoreClient SuppressDescription SuppressColumnSorting XHTML HTMLTable Charset=UTF-8
+IndexOrderDefault Ascending Date
 
 AddType text/plain KEYS
 AddType text/plain .asc
