--- a/get.filebot.net/filebot/.htaccess
+++ b/get.filebot.net/filebot/.htaccess
@@ -1,7 +1,6 @@
 Options +Indexes
 
-IndexOptions FancyIndexing NameWidth=* IconsAreLinks IconWidth=16 IconHeight=16 VersionSort FoldersFirst IgnoreCase IgnoreClient SuppressDescription SuppressColumnSorting XHTML HTMLTable Charset=UTF-8
-
+IndexOptions FancyIndexing NameWidth=* IconsAreLinks IconWidth=16 IconHeight=16 VersionSort FoldersFirst IgnoreClient SuppressDescription SuppressColumnSorting XHTML HTMLTable Charset=UTF-8
 
 AddType text/plain KEYS
 AddType text/plain .asc
