ExpiresByType video/mp4                 "access plus 1 week"

--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -45,5 +45,5 @@ ExpiresByType image/svg+xml             "access plus 1 week"
 ExpiresByType image/png                 "access plus 1 week"
 ExpiresByType image/gif                 "access plus 1 week"
 ExpiresByType image/png                 "access plus 1 week"
-ExpiresByType application/x-xz          "access plus 1 week"
-ExpiresByType image/x-icon              "access plus 1 year"
+ExpiresByType video/mp4                 "access plus 1 week"
+ExpiresByType image/x-icon              "access plus 1 week"
