--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project name="filebot-website" default="website">
+<project name="filebot-website" default="website" xmlns:ivy="antlib:org.apache.ivy.ant" xmlns:groovy="antlib:org.codehaus.groovy">
 
 	<!-- define source dirs -->
 	<property name="www.dist" location="${basedir}/dist/filebot.net" />
@@ -35,6 +35,16 @@
 		</copy-replace>
 	</target>
 
+
+	<target name="qnap">
+		<groovy:groovy src="build-qnap.groovy" />
+	</target>
+
+
+	<target name="resolve" description="Retrieve dependencies with Apache Ivy">
+		<delete dir="lib" />
+		<ivy:retrieve pattern="lib/[artifact]-[type].[ext]" />
+	</target>
 
 
 
