--- a/get.filebot.net/.htaccess
+++ b/get.filebot.net/.htaccess
@@ -28,6 +28,7 @@ AddIcon https://www.filebot.net/icons/download.mac.png .app.tar.xz
 AddIcon https://www.filebot.net/icons/download.linux.png .deb
 AddIcon https://www.filebot.net/icons/page.zip.png .xz
 AddIcon https://www.filebot.net/icons/page.zip.png .spk
+AddIcon https://www.filebot.net/icons/page.zip.png .qpkg
 
 AddIcon https://www.filebot.net/icons/page.key.png .asc
 AddIcon https://www.filebot.net/icons/page.green.png .sha256
