--- a/get.filebot.net/.htaccess
+++ b/get.filebot.net/.htaccess
@@ -16,19 +16,13 @@ AddType application/octet-stream msi zip pkg tar xz deb spk qpkg
 
 IndexStyleSheet https://www.filebot.net/index.css
 
-DefaultIcon https://www.filebot.net/icons/page.code.png
+DefaultIcon https://www.filebot.net/icons/page.green.png
 
 AddIcon https://www.filebot.net/icons/folder.png ^^DIRECTORY^^
 AddIcon https://www.filebot.net/icons/keys.png KEYS
 
-AddIcon https://www.filebot.net/icons/download.windows.png .msi
-AddIcon https://www.filebot.net/icons/download.windows.png .zip
-AddIcon https://www.filebot.net/icons/download.mac.png .pkg
-AddIcon https://www.filebot.net/icons/download.mac.png .app.tar.xz
+AddIcon https://www.filebot.net/icons/download.windows.png .msi .msi
+AddIcon https://www.filebot.net/icons/download.mac.png .pkg .app.tar.xz
 AddIcon https://www.filebot.net/icons/download.linux.png .deb
-AddIcon https://www.filebot.net/icons/page.zip.png .xz
-AddIcon https://www.filebot.net/icons/page.zip.png .spk
-AddIcon https://www.filebot.net/icons/page.zip.png .qpkg
-
-AddIcon https://www.filebot.net/icons/page.key.png .asc
-AddIcon https://www.filebot.net/icons/page.green.png .sha256
+AddIcon https://www.filebot.net/icons/page.zip.png .gz .xz .spk .qpkg
+AddIcon https://www.filebot.net/icons/page.key.png .asc .gpg
