--- a/build.xml
+++ b/build.xml
@@ -2,8 +2,8 @@
 <project name="filebot-website" default="website" xmlns:ivy="antlib:org.apache.ivy.ant" xmlns:groovy="antlib:org.codehaus.groovy">
 
 	<!-- define source dirs -->
-	<property name="www.dist" location="${basedir}/dist/filebot.net" />
-	<property name="www.src" location="${basedir}/www.filebot.net" />
+	<property name="www.dist" location="dist/filebot.net" />
+	<property name="www.src" location="www.filebot.net" />
 
 	<!-- import property files -->
 	<property file="${basedir}/profile.properties" />
@@ -12,6 +12,10 @@
 	<!-- define release files -->
 	<property name="release" value="${application.name}_${application.version}" />
 	<property name="link.release.prefix" value="${link.release.index}/${release}/${release}" />
+
+	<property name="repo.deb" location="get.filebot.net/deb" />
+	<property name="repo.release" location="get.filebot.net/filebot/${release}" />
+
 
 	<!-- timestamp variables -->
 	<tstamp prefix="tstamp">
@@ -41,11 +45,24 @@
 	</target>
 
 
+	<target name="deb">
+		<delete dir="${repo.deb}" verbose="yes" />
+
+		<!-- copy latest deb package -->
+		<copy todir="dist" flatten="yes" preservelastmodified="yes" verbose="yes">
+			<fileset dir="${repo.release}" includes="*.deb" />
+		</copy>
+
+		<exec executable="prm" dir="dist" failonerror="yes">
+			<arg line="--directory . --type deb --release stable --component main --arch amd64 --path ${repo.deb} --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
+		</exec>
+	</target>
+
+
 	<target name="resolve" description="Retrieve dependencies with Apache Ivy">
 		<delete dir="lib" />
 		<ivy:retrieve pattern="lib/[artifact]-[type].[ext]" />
 	</target>
-
 
 
 	<macrodef name="copy-replace" description="Copy text files and replace ant variables">
