--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project name="filebot-website" default="website" xmlns:ivy="antlib:org.apache.ivy.ant" xmlns:groovy="antlib:org.codehaus.groovy">
+<project name="filebot-website" default="website" xmlns:ivy="antlib:org.apache.ivy.ant" xmlns:groovy="antlib:org.codehaus.groovy" xmlns:syno="antlib:net.filebot.ant.spk">
 
 	<!-- define source dirs -->
 	<property name="www.dist" location="dist/filebot.net" />
@@ -13,8 +13,9 @@
 	<property name="release" value="${application.name}_${application.version}" />
 	<property name="link.release.prefix" value="${link.release.index}/${release}/${release}" />
 
-	<property name="repo.deb" location="get.filebot.net/deb" />
 	<property name="repo.release" location="get.filebot.net/filebot/${release}" />
+	<property name="repo.deb" location="get.filebot.net/deb" />
+	<property name="repo.syno" location="get.filebot.net/syno" />
 
 
 	<!-- timestamp variables -->
@@ -40,12 +41,7 @@
 	</target>
 
 
-	<target name="qnap">
-		<groovy:groovy src="build-qnap.groovy" />
-	</target>
-
-
-	<target name="deb">
+	<target name="deb" description="Update DEB Package Repository">
 		<delete dir="${repo.deb}" verbose="yes" />
 
 		<!-- copy latest deb package -->
@@ -56,6 +52,24 @@
 		<exec executable="prm" dir="dist" failonerror="yes">
 			<arg line="--directory . --type deb --release stable --component main --arch amd64 --path ${repo.deb} --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
 		</exec>
+	</target>
+
+
+	<target name="syno" description="Update Synology Package Source">
+		<syno:package-source file="${repo.syno}/index.json">
+			<spk file="${repo.release}/${release}_noarch.spk">
+				<thumbnail url="https://www.filebot.net/syno/filebot-thumbnail.png" />
+				<snapshot url="https://www.filebot.net/syno/filebot-snapshot.png" />
+			</spk>
+			<source url="https://raw.githubusercontent.com/filebot/filebot-node/master/syno-repo.json" />
+			<source url="https://raw.githubusercontent.com/rednoah/java-installer/master/syno-repo.json" />
+			<source url="https://raw.githubusercontent.com/rednoah/ant-installer/master/syno-repo.json" />
+		</syno:package-source>
+	</target>
+
+
+	<target name="qnap" description="Update QNAP App Repository">
+		<groovy:groovy src="build-qnap.groovy" />
 	</target>
 
 
