Move syno repository to filebot-website

--- a/app.properties
+++ b/app.properties
@@ -3,7 +3,7 @@ application.name: FileBot
 application.version: 4.8.1
 
 # File Release System
-link.release.index: https://get.filebot.net/filebot/
+link.release.index: https://get.filebot.net/filebot
 
 # Package Information
 package.name: filebot
