--- a/build.xml
+++ b/build.xml
@@ -52,6 +52,7 @@
 		<exec executable="prm" dir="dist" failonerror="yes">
 			<arg line="--directory . --type deb --release stable --component main --arch amd64 --path ${repo.deb} --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
 		</exec>
+		<delete file="${repo.deb}/dists/stable/main/binary-amd64/${release}_amd64.deb" verbose="yes" />
 	</target>
 
 
