Debian package is available via APT

--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -15,25 +15,25 @@ redirect 302 /windows/support.html    https://www.filebot.net/forums/viewforum.p
 redirect 302 /mac/support.html        https://www.filebot.net/forums/viewforum.php?f=12
 redirect 302 /mac/subtitles.html      https://www.filebot.net/forums/viewtopic.php?f=12&t=3350
 redirect 302 /mac/brew.html           https://www.filebot.net/forums/viewtopic.php?f=4&t=2049
-
 redirect 302 /linux/support.html      https://www.filebot.net/forums/viewforum.php?f=11
-redirect 302 /linux/snap.html         https://snapcraft.io/filebot
-redirect 302 /linux/docker.html       https://hub.docker.com/r/rednoah/filebot/
-redirect 302 /linux/syno.html         https://www.filebot.net/forums/viewtopic.php?f=13&t=1802
-redirect 302 /linux/qnap.html         https://www.filebot.net/forums/viewtopic.php?f=13&t=6014
 redirect 302 /syno/support.html       https://www.filebot.net/forums/viewforum.php?f=13
 redirect 302 /syno/manual.html        https://www.filebot.net/forums/viewtopic.php?f=13&t=1802
 redirect 302 /channel.html            https://discord.gg/cKVvZ2S
+
+# Redirect to Package Links
+redirect 302 /linux/apt.html          https://www.filebot.net/forums/viewtopic.php?f=11&t=6028
+redirect 302 /linux/syno.html         https://www.filebot.net/forums/viewtopic.php?f=13&t=1802
+redirect 302 /linux/qnap.html         https://www.filebot.net/forums/viewtopic.php?f=13&t=6014
+redirect 302 /linux/snap.html         https://snapcraft.io/filebot
+redirect 302 /linux/docker.html       https://hub.docker.com/r/rednoah/filebot/
 
 # Redirect Forum Links
 redirect 302 /forums/rules.php        https://www.filebot.net/forums/viewtopic.php?f=5&t=1868
 redirect 302 /forums/faq.php          https://www.filebot.net/forums/viewtopic.php?f=3&t=7
 redirect 302 /forums/help/faq         https://www.filebot.net/forums/viewtopic.php?f=3&t=7
 
-
 # Disable Directory Index
 Options -Indexes
-
 
 # Cache Static Resources
 ExpiresActive on
