--- a/get.filebot.net/deb/.htaccess
+++ b/get.filebot.net/deb/.htaccess
@@ -1,2 +1,4 @@
+DirectoryIndex index.list
+
 # Redirect deb package
 RedirectMatch /binary-amd64/FileBot_([\d.]+)_amd64.deb$ https://get.filebot.net/filebot/FileBot_$1/FileBot_$1_amd64.deb
