--- a/get.filebot.net/.htaccess
+++ b/get.filebot.net/.htaccess
@@ -11,8 +11,8 @@ IndexOrderDefault Ascending Date
 
 IndexIgnore *.gif *.ico *.html *.txt
 
-AddType text/plain KEYS asc sha256
-AddType application/octet-stream msi zip pkg tar xz deb spk qpkg
+AddType text/plain KEYS .asc .sha256
+AddType application/octet-stream .msi .zip .pkg .tar .xz .deb .spk .qpkg
 
 IndexStyleSheet https://www.filebot.net/index.css
 
@@ -21,7 +21,7 @@ DefaultIcon https://www.filebot.net/icons/page.green.png
 AddIcon https://www.filebot.net/icons/folder.png ^^DIRECTORY^^
 AddIcon https://www.filebot.net/icons/keys.png KEYS
 
-AddIcon https://www.filebot.net/icons/download.windows.png .msi .msi
+AddIcon https://www.filebot.net/icons/download.windows.png .msi .zip
 AddIcon https://www.filebot.net/icons/download.mac.png .pkg .app.tar.xz
 AddIcon https://www.filebot.net/icons/download.linux.png .deb
 AddIcon https://www.filebot.net/icons/page.zip.png .gz .xz .spk .qpkg
