--- a/get.filebot.net/.htaccess
+++ b/get.filebot.net/.htaccess
@@ -1,7 +1,7 @@
 # Redirect to Windows Store or Mac App Store
-redirect 302 /windows/ https://www.microsoft.com/en-us/store/p/filebot/9nblggh52t9x?cid=get
-redirect 302 /mac/ https://itunes.apple.com/us/app/filebot/id905384638?mt=12&uo=6&at=1l3vupy&ct=get
-
+redirect 302 /windows/  https://www.microsoft.com/en-us/store/p/filebot/9nblggh52t9x?cid=get
+redirect 302 /mac/      https://itunes.apple.com/us/app/filebot/id905384638?mt=12&uo=6&at=1l3vupy&ct=get
+redirect 302 /license/  https://pay.paddle.com/checkout/534413?quantity_variable=0
 
 # Enable Fancy Directory Index
 Options +Indexes
@@ -11,18 +11,18 @@ IndexOrderDefault Ascending Date
 
 IndexIgnore *.gif *.ico *.html *.txt
 
-AddType text/plain KEYS .asc .sha256
-AddType application/octet-stream .msi .zip .pkg .tar .xz .deb .spk .qpkg
+AddType application/octet-stream  .msi .zip .pkg .tar .xz .deb .spk .qpkg
+AddType text/plain                KEYS .asc .sha256
 
 IndexStyleSheet https://www.filebot.net/index.css
 
 DefaultIcon https://www.filebot.net/icons/page.green.png
 
-AddIcon https://www.filebot.net/icons/folder.png ^^DIRECTORY^^
-AddIcon https://www.filebot.net/icons/keys.png KEYS
+AddIcon https://www.filebot.net/icons/folder.png  ^^DIRECTORY^^
+AddIcon https://www.filebot.net/icons/keys.png    KEYS
 
-AddIcon https://www.filebot.net/icons/download.windows.png .msi .zip
-AddIcon https://www.filebot.net/icons/download.mac.png .pkg .app.tar.xz
-AddIcon https://www.filebot.net/icons/download.linux.png .deb
-AddIcon https://www.filebot.net/icons/page.zip.png .gz .xz .spk .qpkg
-AddIcon https://www.filebot.net/icons/page.key.png .asc .gpg
+AddIcon https://www.filebot.net/icons/download.windows.png  .msi .zip
+AddIcon https://www.filebot.net/icons/download.mac.png      .pkg .app.tar.xz
+AddIcon https://www.filebot.net/icons/download.linux.png    .deb
+AddIcon https://www.filebot.net/icons/page.zip.png          .gz .xz .spk .qpkg
+AddIcon https://www.filebot.net/icons/page.key.png          .asc .gpg
