--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -17,6 +17,7 @@ redirect 302 /mac/subtitles.html      https://www.filebot.net/forums/viewtopic.p
 redirect 302 /mac/brew.html           https://www.filebot.net/forums/viewtopic.php?f=4&t=2049
 redirect 302 /linux/support.html      https://www.filebot.net/forums/viewforum.php?f=11
 redirect 302 /syno/support.html       https://www.filebot.net/forums/viewforum.php?f=13
+redirect 302 /qnap/support.html       https://www.filebot.net/forums/viewforum.php?f=13
 redirect 302 /syno/manual.html        https://www.filebot.net/forums/viewtopic.php?f=13&t=1802
 redirect 302 /channel.html            https://discord.gg/cKVvZ2S
 
