--- a/build.xml
+++ b/build.xml
@@ -90,7 +90,7 @@
 		<attribute name="todir" />
 		<element name="filesets" implicit="yes" />
 		<sequential>
-			<copy todir="@{todir}" preservelastmodified="yes" verbose="yes" encoding="utf-8" overwrite="yes">
+			<copy todir="@{todir}" verbose="yes" encoding="utf-8" overwrite="yes">
 				<filesets />
 				<filterset begintoken="@{" endtoken="}">
 					<propertyset>
