--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -12,6 +12,7 @@ redirect 302 /report.html             https://www.filebot.net/forums/viewforum.p
 redirect 302 /help.html               https://www.filebot.net/forums/viewtopic.php?f=5&t=1868
 redirect 302 /support.html            https://www.filebot.net/forums/viewforum.php?f=8
 redirect 302 /windows/support.html    https://www.filebot.net/forums/viewforum.php?f=10
+redirect 302 /windows/chocolatey.html https://chocolatey.org/packages/filebot/
 redirect 302 /mac/support.html        https://www.filebot.net/forums/viewforum.php?f=12
 redirect 302 /mac/subtitles.html      https://www.filebot.net/forums/viewtopic.php?f=12&t=3350
 redirect 302 /mac/brew.html           https://www.filebot.net/forums/viewtopic.php?f=4&t=2049
