--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -1,4 +1,4 @@
-# Redirect to Windows Store or Mac App Store
+# Redirect to Microsoft Store or Mac App Store
 redirect 302 /windows/purchase.html   https://www.microsoft.com/en-us/store/p/filebot/9nblggh52t9x?cid=purchase
 redirect 302 /mac/purchase.html       https://itunes.apple.com/us/app/filebot/id905384638?mt=12&uo=6&at=1l3vupy&ct=purchase
 
