--- a/get.filebot.net/.htaccess
+++ b/get.filebot.net/.htaccess
@@ -1,4 +1,4 @@
-# Redirect to Windows Store or Mac App Store
+# Redirect to Microsoft Store or Mac App Store
 redirect 302 /windows/  https://www.microsoft.com/en-us/store/p/filebot/9nblggh52t9x?cid=get
 redirect 302 /mac/      https://itunes.apple.com/us/app/filebot/id905384638?mt=12&uo=6&at=1l3vupy&ct=get
 redirect 302 /license/  https://pay.paddle.com/checkout/534413?quantity_variable=0
