--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -10,6 +10,7 @@ redirect 302 /amc.html                https://www.filebot.net/forums/viewtopic.p
 redirect 302 /manual.html             https://www.filebot.net/forums/viewtopic.php?f=3&t=7
 redirect 302 /report.html             https://www.filebot.net/forums/viewforum.php?f=6
 redirect 302 /help.html               https://www.filebot.net/forums/viewtopic.php?f=5&t=1868
+redirect 302 /activate.html           https://www.filebot.net/forums/viewtopic.php?f=8&t=6121
 redirect 302 /support.html            https://www.filebot.net/forums/viewforum.php?f=8
 redirect 302 /windows/support.html    https://www.filebot.net/forums/viewforum.php?f=10
 redirect 302 /windows/chocolatey.html https://chocolatey.org/packages/filebot/
