--- a/build.xml
+++ b/build.xml
@@ -54,7 +54,7 @@
 
 		<!-- universal -->
 		<copy todir="dist/deb/universal" flatten="yes" preservelastmodified="yes" verbose="yes">
-			<fileset dir="${repo.release}" includes="*_amd64.deb" />
+			<fileset dir="${repo.release}" includes="*_universal.deb" />
 		</copy>
 		<exec executable="prm" dir="dist/deb/universal" failonerror="yes">
 			<arg line="--directory . --type deb --release stable --component universal --arch noarch --path ${repo.deb} --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
@@ -62,7 +62,7 @@
 
 		<!-- universal-jdk8 -->
 		<copy todir="dist/deb/universal-jdk8" flatten="yes" preservelastmodified="yes" verbose="yes">
-			<fileset dir="${repo.release}" includes="*_amd64.deb" />
+			<fileset dir="${repo.release}" includes="*_universal-jdk8.deb" />
 		</copy>
 		<exec executable="prm" dir="dist/deb/universal-jdk8" failonerror="yes">
 			<arg line="--directory . --type deb --release stable --component universal-jdk8 --arch noarch --path ${repo.deb} --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
