--- a/build.xml
+++ b/build.xml
@@ -65,7 +65,7 @@
 			<fileset dir="${repo.release}" includes="*_universal-jdk8.deb" />
 		</copy>
 		<exec executable="prm" dir="dist/deb/universal-jdk8" failonerror="yes">
-			<arg line="--directory . --type deb --release universal --component jdk8 --arch all --path ${repo.deb} --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
+			<arg line="--directory . --type deb --release universal-jdk8 --component main --arch all --path ${repo.deb} --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
 		</exec>
 	</target>
 
