--- a/ivy.xml
+++ b/ivy.xml
@@ -3,9 +3,11 @@
 	<info organisation="net.filebot" module="website" />
 	<dependencies>
 		<dependency org="org.apache.ant" name="ant" rev="1.10.4" />
-		<dependency org="org.codehaus.groovy" name="groovy-ant" rev="2.5.0" />
-		<dependency org="org.codehaus.groovy" name="groovy-json" rev="2.5.0" />
-		<dependency org="org.codehaus.groovy" name="groovy-xml" rev="2.5.0" />
+		<dependency org="org.codehaus.groovy" name="groovy-ant" rev="2.5.6" />
+		<dependency org="org.codehaus.groovy" name="groovy-json" rev="2.5.6" />
+		<dependency org="org.codehaus.groovy" name="groovy-xml" rev="2.5.6" />
+		<dependency org="org.codehaus.groovy" name="groovy-dateutil" rev="2.5.6" />
+		<dependency org="org.codehaus.groovy" name="groovy-groovydoc" rev="2.5.6" />
 		<dependency org="net.filebot" name="ant-spk" rev="0.6" />
 	</dependencies>
 </ivy-module>
