--- a/get.filebot.net/.htaccess
+++ b/get.filebot.net/.htaccess
@@ -23,6 +23,6 @@ AddIcon https://www.filebot.net/icons/keys.png    KEYS
 
 AddIcon https://www.filebot.net/icons/download.windows.png  .msi .zip
 AddIcon https://www.filebot.net/icons/download.mac.png      .pkg .app.tar.xz
-AddIcon https://www.filebot.net/icons/download.linux.png    .deb
+AddIcon https://www.filebot.net/icons/download.linux.png    .deb .rpm
 AddIcon https://www.filebot.net/icons/page.zip.png          .gz .xz .spk .qpkg
 AddIcon https://www.filebot.net/icons/page.key.png          .asc .gpg
