--- a/build.xml
+++ b/build.xml
@@ -15,6 +15,7 @@
 
 	<property name="repo.release" location="get.filebot.net/filebot/${release}" />
 	<property name="repo.deb" location="get.filebot.net/deb" />
+	<property name="repo.rpm" location="get.filebot.net/rpm" />
 	<property name="repo.syno" location="get.filebot.net/syno" />
 
 
@@ -67,6 +68,20 @@
 		</copy>
 		<exec executable="prm" dir="dist/deb/universal-jdk8" failonerror="yes">
 			<arg line="--directory . --type deb --release universal-jdk8 --component main --arch all --path ${repo.deb} --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
+		</exec>
+	</target>
+
+
+	<!-- @require https://github.com/rednoah/prm -->
+	<target name="rpm" description="Update RPM Package Repository">
+		<delete dir="${repo.rpm}/universal-jdk8" verbose="yes" />
+
+		<!-- universal-jdk8 -->
+		<copy todir="dist/rpm/universal-jdk8" flatten="yes" preservelastmodified="yes" verbose="yes">
+			<fileset dir="${repo.release}" includes="*.rpm" />
+		</copy>
+		<exec executable="prm" dir="dist/rpm/universal-jdk8" failonerror="yes">
+			<arg line="--directory . --type rpm --release universal-jdk8 --arch noarch --path ${repo.rpm} --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
 		</exec>
 	</target>
 
