--- a/build.xml
+++ b/build.xml
@@ -78,7 +78,7 @@
 
 		<!-- universal-jdk8 -->
 		<copy todir="dist/rpm/universal-jdk8" flatten="yes" preservelastmodified="yes" verbose="yes">
-			<fileset dir="${repo.release}" includes="*.rpm" />
+			<fileset dir="${repo.release}" includes="*_universal-jdk8.rpm" />
 		</copy>
 		<exec executable="prm" dir="dist/rpm/universal-jdk8" failonerror="yes">
 			<arg line="--directory . --type rpm --release universal-jdk8 --arch noarch --path ${repo.rpm} --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
