redirect 302 /error/429.html          https://www.filebot.net/forums/viewtopic.php?f=4&t=9594

--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -21,6 +21,7 @@ redirect 302 /linux/support.html      https://www.filebot.net/forums/viewforum.p
 redirect 302 /syno/support.html       https://www.filebot.net/forums/viewforum.php?f=13
 redirect 302 /qnap/support.html       https://www.filebot.net/forums/viewforum.php?f=13
 redirect 302 /syno/manual.html        https://www.filebot.net/forums/viewtopic.php?f=13&t=1802
+redirect 302 /error/429.html          https://www.filebot.net/forums/viewtopic.php?f=4&t=9594
 redirect 302 /channel.html            https://discord.gg/cKVvZ2S
 
 # Redirect to Package Links
