--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -8,6 +8,7 @@ redirect 302 /donate.html             https://www.paypal.com/cgi-bin/webscr?cmd=
 # Redirect to Support Pages
 redirect 302 /amc.html                https://www.filebot.net/forums/viewtopic.php?f=4&t=215
 redirect 302 /manual.html             https://www.filebot.net/forums/viewtopic.php?f=3&t=7
+redirect 302 /notes.html              https://www.filebot.net/forums/viewforum.php?f=7
 redirect 302 /report.html             https://www.filebot.net/forums/viewforum.php?f=6
 redirect 302 /help.html               https://www.filebot.net/forums/viewtopic.php?f=5&t=1868
 redirect 302 /activate.html           https://www.filebot.net/forums/viewtopic.php?f=8&t=6121
