--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -2,42 +2,40 @@
 redirect 302 /windows/purchase.html   https://www.microsoft.com/en-us/store/p/filebot/9nblggh52t9x?cid=purchase
 redirect 302 /mac/purchase.html       https://itunes.apple.com/us/app/filebot/id905384638?mt=12&uo=6&at=1l3vupy&ct=purchase
 
-# Redirect to PayPal donation page
-redirect 302 /donate.html             https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=rednoah%40filebot%2enet&lc=US&item_name=FileBot%20Support&currency_code=EUR&bn=PP%2dDonationsBF%3abtn_donate_SM%2egif%3aNonHosted
-
 # Redirect to Support Pages
-redirect 302 /amc.html                https://www.filebot.net/forums/viewtopic.php?f=4&t=215
-redirect 302 /manual.html             https://www.filebot.net/forums/viewtopic.php?f=3&t=7
+redirect 302 /amc.html                https://www.filebot.net/forums/viewtopic.php?t=215
+redirect 302 /manual.html             https://www.filebot.net/forums/viewtopic.php?t=7
 redirect 302 /notes.html              https://www.filebot.net/forums/viewforum.php?f=7
 redirect 302 /report.html             https://www.filebot.net/forums/viewforum.php?f=6
-redirect 302 /help.html               https://www.filebot.net/forums/viewtopic.php?f=5&t=1868
-redirect 302 /activate.html           https://www.filebot.net/forums/viewtopic.php?f=8&t=6121
+redirect 302 /help.html               https://www.filebot.net/forums/viewtopic.php?t=1868
+redirect 302 /activate.html           https://www.filebot.net/forums/viewtopic.php?t=6121
 redirect 302 /support.html            https://www.filebot.net/forums/viewforum.php?f=8
 redirect 302 /windows/support.html    https://www.filebot.net/forums/viewforum.php?f=10
-redirect 302 /windows/chocolatey.html https://chocolatey.org/packages/filebot/
 redirect 302 /mac/support.html        https://www.filebot.net/forums/viewforum.php?f=12
-redirect 302 /mac/subtitles.html      https://www.filebot.net/forums/viewtopic.php?f=12&t=3350
-redirect 302 /mac/brew.html           https://www.filebot.net/forums/viewtopic.php?f=4&t=2049
+redirect 302 /mac/subtitles.html      https://www.filebot.net/forums/viewtopic.php?t=3350
 redirect 302 /linux/support.html      https://www.filebot.net/forums/viewforum.php?f=11
 redirect 302 /syno/support.html       https://www.filebot.net/forums/viewforum.php?f=13
 redirect 302 /qnap/support.html       https://www.filebot.net/forums/viewforum.php?f=13
-redirect 302 /syno/manual.html        https://www.filebot.net/forums/viewtopic.php?f=13&t=1802
-redirect 302 /error/429.html          https://www.filebot.net/forums/viewtopic.php?f=4&t=9594
+redirect 302 /syno/manual.html        https://www.filebot.net/forums/viewtopic.php?t=1802
+redirect 302 /error/429.html          https://www.filebot.net/forums/viewtopic.php?t=9594
+redirect 302 /contact/paddle.html     https://paddle.net/charge
 redirect 302 /channel.html            https://discord.gg/cKVvZ2S
 
 # Redirect to Package Links
-redirect 302 /linux/apt.html          https://www.filebot.net/forums/viewtopic.php?f=11&t=6028
-redirect 302 /linux/yum.html          https://www.filebot.net/forums/viewtopic.php?f=11&t=10631
-redirect 302 /linux/syno.html         https://www.filebot.net/forums/viewtopic.php?f=13&t=1802
-redirect 302 /linux/qnap.html         https://www.filebot.net/forums/viewtopic.php?f=13&t=6014
+redirect 302 /windows/chocolatey.html https://chocolatey.org/packages/filebot/
+redirect 302 /mac/brew.html           https://www.filebot.net/forums/viewtopic.php?t=2049
+redirect 302 /linux/apt.html          https://www.filebot.net/forums/viewtopic.php?t=6028
+redirect 302 /linux/yum.html          https://www.filebot.net/forums/viewtopic.php?t=10631
+redirect 302 /linux/syno.html         https://www.filebot.net/forums/viewtopic.php?t=1802
+redirect 302 /linux/qnap.html         https://www.filebot.net/forums/viewtopic.php?t=6014
 redirect 302 /linux/snap.html         https://snapcraft.io/filebot
 redirect 302 /linux/docker.html       https://hub.docker.com/r/rednoah/filebot/
 redirect 302 /linux/aur.html          https://aur.archlinux.org/packages/filebot/
 
 # Redirect Forum Links
-redirect 302 /forums/rules.php        https://www.filebot.net/forums/viewtopic.php?f=5&t=1868
-redirect 302 /forums/faq.php          https://www.filebot.net/forums/viewtopic.php?f=3&t=7
-redirect 302 /forums/help/faq         https://www.filebot.net/forums/viewtopic.php?f=3&t=7
+redirect 302 /forums/rules.php        https://www.filebot.net/forums/viewtopic.php?t=1868
+redirect 302 /forums/faq.php          https://www.filebot.net/forums/viewtopic.php?t=7
+redirect 302 /forums/help/faq         https://www.filebot.net/forums/viewtopic.php?t=7
 
 # Disable Directory Index
 Options -Indexes
