Redirect Package Source correctly without side-effects

--- a/www.filebot.net/syno/.htaccess
+++ b/www.filebot.net/syno/.htaccess
@@ -1,4 +1,4 @@
 # Redirect Package Source
 RewriteEngine On
 RewriteCond %{QUERY_STRING} ^.+$
-RewriteRule ^.+$ https://get.filebot.net/syno/ [R=301, L]
+RewriteRule ^.+$ https://get.filebot.net/syno/ [R=301]
