--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -18,6 +18,7 @@ redirect 301 /syno/support.html       https://www.filebot.net/forums/viewforum.p
 redirect 301 /qnap/support.html       https://www.filebot.net/forums/viewforum.php?f=13
 redirect 301 /syno/manual.html        https://www.filebot.net/forums/viewtopic.php?t=1802
 redirect 301 /error/429.html          https://www.filebot.net/forums/viewtopic.php?t=9594
+redirect 301 /help/args.html          https://www.filebot.net/forums/viewtopic.php?t=1899
 redirect 301 /contact/paddle.html     https://paddle.net/charge
 redirect 301 /channel.html            https://discord.gg/cKVvZ2S
 
