--- a/get.filebot.net/.htaccess
+++ b/get.filebot.net/.htaccess
@@ -3,7 +3,7 @@ RedirectMatch 301 ^/$ https://www.filebot.net/download.html
 
 # Redirect to Microsoft Store or Mac App Store
 Redirect 301 /windows/  https://www.microsoft.com/en-us/store/p/filebot/9nblggh52t9x?cid=get
-Redirect 301 /mac/      https://itunes.apple.com/us/app/filebot/id905384638?mt=12&uo=6&at=1l3vupy&ct=get
+Redirect 301 /mac/      https://apps.apple.com/us/app/filebot/id905384638?mt=12&uo=6&at=1l3vupy&ct=get
 Redirect 301 /license/  https://pay.paddle.com/checkout/534413?quantity_variable=0
 
 # Enable Fancy Directory Index
