--- a/build.xml
+++ b/build.xml
@@ -75,14 +75,14 @@
 
 	<!-- @require https://github.com/rednoah/prm -->
 	<target name="rpm" description="Update RPM Package Repository">
-		<delete dir="${repo.rpm}/universal-jdk8" verbose="yes" />
+		<delete dir="${repo.rpm}/main" verbose="yes" />
 
-		<!-- universal-jdk8 -->
-		<copy todir="dist/rpm/universal-jdk8" flatten="yes" preservelastmodified="yes" verbose="yes">
-			<fileset dir="${repo.release}" includes="*_universal-jdk8.rpm" />
+		<!-- main -->
+		<copy todir="dist/rpm/main" flatten="yes" preservelastmodified="yes" verbose="yes">
+			<fileset dir="${repo.release}" includes="*_amd64.rpm" />
 		</copy>
-		<exec executable="prm" dir="dist/rpm/universal-jdk8" failonerror="yes">
-			<arg line="--directory . --type rpm --release universal-jdk8 --arch noarch --path ${repo.rpm} --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
+		<exec executable="prm" dir="dist/rpm/main" failonerror="yes">
+			<arg line="--directory . --type rpm --release amd64 --arch x86_64 --path ${repo.rpm} --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
 		</exec>
 	</target>
 
