--- a/build.xml
+++ b/build.xml
@@ -82,7 +82,7 @@
 			<fileset dir="${repo.release}" includes="*_amd64.rpm" />
 		</copy>
 		<exec executable="prm" dir="dist/rpm/main" failonerror="yes">
-			<arg line="--directory . --type rpm --release amd64 --arch x86_64 --path ${repo.rpm} --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
+			<arg line="--directory . --type rpm --release main --arch x86_64 --path ${repo.rpm} --gpg ${package.maintainer} --gpg_sign_algorithm SHA256" />
 		</exec>
 	</target>
 
