--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -42,6 +42,9 @@ redirect 301 /forums/rules.php        https://www.filebot.net/forums/viewtopic.p
 redirect 301 /forums/faq.php          https://www.filebot.net/forums/viewtopic.php?t=7
 redirect 301 /forums/help/faq         https://www.filebot.net/forums/viewtopic.php?t=7
 
+# Custom Error Page
+ErrorDocument 500 "BAD REQUEST"
+
 # Disable Directory Index
 Options -Indexes
 
