--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -22,6 +22,7 @@ redirect 301 /error/429.html          https://www.filebot.net/forums/viewtopic.p
 redirect 301 /help/args.html          https://www.filebot.net/forums/viewtopic.php?t=1899
 redirect 301 /help/xattr.html         https://www.filebot.net/forums/viewtopic.php?t=324
 redirect 301 /help/presets.html       https://www.filebot.net/forums/viewtopic.php?t=3228
+redirect 301 /help/apply.html         https://www.filebot.net/forums/viewtopic.php?t=11079
 redirect 301 /contact/paddle.html     https://paddle.com/support/contact/
 redirect 301 /channel.html            https://discord.gg/cKVvZ2S
 
