Cleanup HTML headers

--- a/app.properties
+++ b/app.properties
@@ -14,8 +14,9 @@ package.company: Point Planck Limited
 package.project: FileBot
 package.synopsis: The ultimate TV and Movie Renamer
 package.description: FileBot is the ultimate tool for organizing and renaming your Movies, TV Shows and Anime as well as fetching subtitles and artwork. It's smart and just works.
-package.tags: Mass Renamer, Rename TV shows, Rename movies, Organize media files, Fetch Subtitles, Check SFV files, Plex Media Server, Kodi Media Center, TheTVDB, TheMovieDB, OpenSubtitles
+package.tags: batch, rename, media, tool, plex, kodi, emby, find, subtitles, mediainfo, sfv, md5sum, sha256sum, terminal, utility
 package.homepage: https://www.filebot.net/
 
-# Images
+# URLs
+link.site.index: https://www.filebot.net/
 link.image.logo: https://www.filebot.net/icon.png
