Update cache instructions

--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -53,14 +53,16 @@ AddDefaultCharset UTF-8
 
 # Cache Static Resources
 ExpiresActive on
-ExpiresByType text/plain                "access plus 1 week"
+ExpiresByType text/html                 "access plus 1 week"
 ExpiresByType text/css                  "access plus 1 week"
+ExpiresByType text/plain                "access plus 1 week"
 ExpiresByType application/javascript    "access plus 1 week"
-ExpiresByType application/json          "access plus 1 week"
-ExpiresByType application/xml           "access plus 1 week"
-ExpiresByType image/svg+xml             "access plus 1 week"
-ExpiresByType image/png                 "access plus 1 week"
-ExpiresByType image/gif                 "access plus 1 week"
-ExpiresByType image/png                 "access plus 1 week"
-ExpiresByType video/mp4                 "access plus 1 week"
-ExpiresByType image/x-icon              "access plus 1 week"
+ExpiresByType application/json          "access plus 1 month"
+ExpiresByType application/xml           "access plus 1 month"
+ExpiresByType image/svg+xml             "access plus 1 month"
+ExpiresByType image/png                 "access plus 1 month"
+ExpiresByType image/gif                 "access plus 1 month"
+ExpiresByType image/png                 "access plus 1 month"
+ExpiresByType video/mp4                 "access plus 1 month"
+ExpiresByType image/x-icon              "access plus 1 month"
+ExpiresByType application/font-sfnt     "access plus 1 month"
