--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -53,7 +53,7 @@ AddDefaultCharset UTF-8
 
 # Cache Static Resources
 ExpiresActive on
-ExpiresByType text/html                 "access plus 1 week"
+ExpiresByType text/html                 "access plus 1 day"
 ExpiresByType text/css                  "access plus 1 week"
 ExpiresByType text/plain                "access plus 1 week"
 ExpiresByType application/javascript    "access plus 1 week"
