--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -54,9 +54,9 @@ AddDefaultCharset UTF-8
 # Cache Static Resources
 ExpiresActive on
 ExpiresByType text/html                 "access plus 1 day"
-ExpiresByType text/css                  "access plus 1 week"
-ExpiresByType text/plain                "access plus 1 week"
-ExpiresByType application/javascript    "access plus 1 week"
+ExpiresByType text/css                  "access plus 1 month"
+ExpiresByType text/plain                "access plus 1 month"
+ExpiresByType application/javascript    "access plus 1 month"
 ExpiresByType application/json          "access plus 1 month"
 ExpiresByType application/xml           "access plus 1 month"
 ExpiresByType image/svg+xml             "access plus 1 month"
