image/vnd.microsoft.icon

--- a/get.filebot.net/.htaccess
+++ b/get.filebot.net/.htaccess
@@ -41,4 +41,4 @@ ExpiresDefault                          "access plus 1 day"
 ExpiresByType text/css                  "access plus 1 month"
 ExpiresByType image/svg+xml             "access plus 1 month"
 ExpiresByType image/png                 "access plus 1 month"
-ExpiresByType image/x-icon              "access plus 1 month"
+ExpiresByType image/vnd.microsoft.icon  "access plus 1 month"
