--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -63,5 +63,5 @@ ExpiresByType image/svg+xml             "access plus 1 month"
 ExpiresByType image/png                 "access plus 1 month"
 ExpiresByType image/gif                 "access plus 1 month"
 ExpiresByType video/mp4                 "access plus 1 month"
-ExpiresByType image/x-icon              "access plus 1 month"
+ExpiresByType image/vnd.microsoft.icon  "access plus 1 month"
 ExpiresByType application/font-sfnt     "access plus 1 month"
