Force update for all *.html files newly generated for new release numbers

--- a/build.xml
+++ b/build.xml
@@ -117,7 +117,7 @@
 		<attribute name="todir" />
 		<element name="filesets" implicit="yes" />
 		<sequential>
-			<copy todir="@{todir}" verbose="yes" encoding="utf-8" overwrite="yes" preservelastmodified="yes">
+			<copy todir="@{todir}" verbose="yes" encoding="utf-8" overwrite="yes" preservelastmodified="no">
 				<filesets />
 				<filterset begintoken="@{" endtoken="}">
 					<propertyset>
