--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -4,7 +4,6 @@ redirect 301 /mac/purchase.html       https://itunes.apple.com/us/app/filebot/id
 
 # Redirect to Support Pages
 redirect 301 /manual.html             https://www.filebot.net/forums/viewtopic.php?t=7
-redirect 301 /report.html             https://www.filebot.net/forums/viewforum.php?f=6
 redirect 301 /amc.html                https://www.filebot.net/forums/viewtopic.php?t=215
 redirect 301 /help.html               https://www.filebot.net/forums/viewtopic.php?t=1868
 redirect 301 /activate.html           https://www.filebot.net/forums/viewtopic.php?t=6121
@@ -20,8 +19,9 @@ redirect 301 /help/args.html          https://www.filebot.net/forums/viewtopic.p
 redirect 301 /help/xattr.html         https://www.filebot.net/forums/viewtopic.php?t=324
 redirect 301 /help/presets.html       https://www.filebot.net/forums/viewtopic.php?t=3228
 redirect 301 /help/apply.html         https://www.filebot.net/forums/viewtopic.php?t=11079
+redirect 301 /report.html             https://www.filebot.net/forums/viewforum.php?f=6
+redirect 301 /notes.html              https://www.filebot.net/forums/viewforum.php?f=7
 redirect 301 /manpage.html            https://www.filebot.net/cli.html#arguments
-redirect 301 /notes.html              https://github.com/filebot/docs/blob/master/CHANGES.md
 redirect 301 /channel.html            https://discord.com/invite/cKVvZ2S
 redirect 301 /contact/paddle.html     https://paddle.net/
 
