--- a/www.filebot.net/.htaccess
+++ b/www.filebot.net/.htaccess
@@ -22,6 +22,7 @@ redirect 301 /help/apply.html         https://www.filebot.net/forums/viewtopic.p
 redirect 301 /report.html             https://www.filebot.net/forums/viewforum.php?f=6
 redirect 301 /notes.html              https://www.filebot.net/forums/viewforum.php?f=7
 redirect 301 /manpage.html            https://www.filebot.net/cli.html#arguments
+redirect 301 /tutorials.html          https://youtube.com/playlist?list=PLdPvEJhzxLMBBQrv9pmVumjzdGoEbQcH9
 redirect 301 /channel.html            https://discord.com/invite/cKVvZ2S
 redirect 301 /contact/paddle.html     https://paddle.net/
 
