Redirect Package Source

--- a/www.filebot.net/syno/.htaccess
+++ b/www.filebot.net/syno/.htaccess
@@ -1,2 +1,4 @@
+DirectoryIndex index.json
+
 # Redirect Package Source
-redirect 301 /syno/ https://get.filebot.net/syno/
+redirect 301 /syno/index.json https://get.filebot.net/syno/
